1.5.3
- automatically expand parent directories of a selected map pack when preset is restored

1.5.2
- ability to insert visual separators into mod list and preset list
- improved support for more Doom engines and file types
- fixed incorrect relative paths to Save dir and Screenshot dir
- minor bug-fixes

1.5.1
- fixed a bug where drag&dropping a file in the mod list would cause the same files to be selected in map-pack list
- fixed a bug where right-click menu actions for IWADs would apply to engines
- fixed download link in the "Update available" notification
- allowed the application window to be downsized little more
- allowed to select multiple files at once when adding a mod via the |+| button
- allowed to select only 1 player for multiplayer
- added right-click menu action "Open file location" for editable lists

1.5
- tool-buttons got icons instead of symbols
- added button to add a directory of mods
- added button to create a new config from an existing one
- added launch modes for recording/replaying demos
- reworked map file view so that it no longer lags when you try to load a directory with huge number of files
- fixed non-existing files not being correctly removed from the saved options

1.4
- added new launch options for video, audio and save/screenshot directory
- added tooltips for some of the launch options
- map names are now extracted from IWAD file instead of guessing them from IWAD name
- added confirmation dialog when attempted to delete a preset
- enabled keyboard control (Enter, Insert, Delete, CTRL+arrows)
- right-click inside an editable list widget pops-up a context menu with available actions
- added "close on launch" option
- before launch, the current directory is changed to engine's directory, improving compatibility with some engines
- options.json is now saved into /home/user/.config/DoomRunner in Linux
- bugfixes related to config file selection

1.3.3
- fixed deh recognition for map packs
- added recognition of bex files

1.3.2